--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,92 +2,122 @@
   display: grid;
   grid-auto-flow: row;
   align-items: center;
-  padding: 8px;
 }
 
 .form fieldset {
   display: grid;
   grid-auto-flow: row;
-  gap: 8px;
+  margin: 0;
   border: none;
   padding: 0;
 }
 
-@media (width <= 900px) {
+.form form > .field-wrapper + .field-wrapper,
+.form form fieldset .field-wrapper + .field-wrapper {
+  margin-top: 24px;
+}
+
+.form form > .selection-wrapper + .selection-wrapper,
+.form form fieldset .selection-wrapper + .selection-wrapper {
+  margin-top: 0.25em;
+}
+
+@media (width >= 600px) {
   .form fieldset {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
+    grid-template-columns: repeat(2, auto);
+    gap: 0.25em 24px;
+  }
+
+  .form form > .selection-wrapper + .selection-wrapper,
+  .form form fieldset .field-wrapper + .field-wrapper,
+  .form form fieldset .selection-wrapper + .selection-wrapper {
+    margin-top: 0;
   }
 }
 
-.form fieldset > legend {
-  font-weight: 700;
-  font-size: var(--heading-font-size-xs);
+@media (width >= 900px) {
+  .form fieldset {
+    grid-template-columns: repeat(3, auto);
+  }
 }
 
-.form label {
-  font-weight: 700;
-  font-size: var(--body-font-size-xxs);
+.form label,
+.form fieldset > legend {
   margin-bottom: 0.25em;
+  font-size: var(--body-font-size-s);
+  font-weight: 700;
+}
+
+.form .selection-wrapper label {
+  margin: 0;
+  font-weight: normal;
 }
 
 .form input,
 .form select,
 .form textarea {
-  font-size: var(--body-font-size-xs);
-  width: 100%;
-  max-width: 50rem;
-  display: block;
-  padding: 12px 8px;
-  border-radius: 4px;
   box-sizing: border-box;
-  border: 1px solid var(--text-color);
-  color: var(--text-color);
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0.5em;
+  border-radius: 4px;
+  border: 1px solid var(--dark-color);
   background-color: var(--background-color);
+  color: var(--text-color);
+  font-size: var(--body-font-size-s);
+  transition: border-color 0.2s;
 }
 
 .form textarea {
   resize: vertical;
 }
 
-.form .selection-wrapper input {
-  width: 16px;
-}
-
-.email-sub-form label {
-  display: none;
-}
-
-.form .selection-wrapper label {
-  margin-bottom: 0;
-}
-
-.form input:hover {
+.form input:hover,
+.form select:hover,
+.form textarea:hover {
   border: 1px solid var(--text-color);
 }
 
-.form .button {
-  max-width: 225px;
-  font-size: var(--body-font-size-md);
-  padding: 0.2em 0.4em;
+.form input:focus,
+.form select:focus,
+.form textarea:focus {
+  outline: 2px solid var(--link-color);
+  outline-offset: 2px;
+}
+
+.form .selection-wrapper input {
+  width: max-content;
+}
+
+@media (width >= 600px) {
+  .form input,
+  .form select,
+  .form textarea {
+    max-width: 50vw;
+  }
+
+  .form .button {
+    max-width: max-content;
+  }
+}
+
+@media (width >= 900px) {
+  .form input,
+  .form select,
+  .form textarea {
+    max-width: 33vw;
+  }
 }
 
 .form .field-wrapper.selection-wrapper {
   grid-auto-flow: column;
   justify-content: start;
-  gap: 16px;
+  gap: 1ch;
 }
 
-.form .field-wrapper > label {
-  order: -1;
-}
-
-.form .field-wrapper.selection-wrapper > label {
-  order: 1;
-}
-
-.form input[required] + label::after {
-  content: "*";
+.form label[data-required]::after {
+  content: '*';
   color: firebrick;
   margin-inline-start: 1ch;
 }
@@ -95,35 +125,35 @@
 .form .toggle-wrapper .switch {
   position: relative;
   display: inline-block;
-  width: 48px;
-  height: 24px;
+  width: 52px;
+  height: 28px;
 }
 
 .form .toggle-wrapper input {
   opacity: 0;
-  width: 0;
-  height: 0;
+  width: 52px;
+  height: 28px;
 }
 
 .form .toggle-wrapper .slider {
   position: absolute;
   cursor: pointer;
   inset: 0;
+  border-radius: 28px;
   background-color: var(--dark-color);
-  transition: 0.4s;
-  border-radius: 30px;
+  transition: background-color 0.2s;
 }
 
 .form .toggle-wrapper .slider::before {
+  content: '';
   position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
+  width: 24px;
+  height: 24px;
+  top: 2px;
   left: 2px;
-  bottom: 2px;
-  background-color: var(--background-color);
-  transition: 0.4s;
   border-radius: 50%;
+  background-color: var(--background-color);
+  transition: transform 0.2s;
 }
 
 .form .toggle-wrapper input:checked + .slider {
@@ -137,101 +167,4 @@
 
 .form .toggle-wrapper input:checked + .slider::before {
   transform: translateX(24px);
-}
-
-/* Email subscription form overrides */
-.email-sub-form {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-.email-sub-form input[type="email"] {
-  border: 1px solid var(--color-neutral-500);
-  border-radius: 0;
-  min-width: 224px;
-  padding: 14px 15px;
-}
-
-.form-block-wrapper button {
-  margin: 0
-}
-
-.email-sub-form button:hover {
-  cursor: pointer;
-}
-
-.form-block-wrapper button[type="submit"] {
-  height: 100%;
-}
-
-.form-block-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-
-@media (width <= 768px) {
-  .form-block-wrapper {
-    position: relative;
-    min-height: 375px;
-  }
-}
-
-.form-block-wrapper .form-info {
-  background: var(--color-neutral-200);
-  padding: 3rem 2.5rem;
-  width: auto;
-}
-
-@media (width <= 768px) {
-  .form-block-wrapper .form-info {
-    z-index: 2;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  
-  .form-block-wrapper .form-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.form-block-wrapper .form-info h1,
-.form-block-wrapper .form-info h2,
-.form-block-wrapper .form-info h3,
-.form-block-wrapper .form-info h4,
-.form-block-wrapper .form-info h5,
-.form-block-wrapper .form-info h6 {
-  margin: 0;
-  padding: 8px;
-}
-
-.form-block-wrapper .form-info p {
-  margin: 0;
-  font-size: var(--body-font-size-s);
-  padding: 8px;
-  line-height: normal;
-}
-
-.form-block-wrapper .form-image img {
-  max-width: 281px;
-  width: auto;
-  height: 100%;
-  object-fit: cover;
-}
-
-@media (width <= 768px) {
-  .form-block-wrapper .form-image img {
-    max-width: 100%;
-  }
-}
-
-.form.email-subscription .form-info p:first-of-type {
-  font-size: var(--heading-font-size-s);
 }
