--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -63,8 +63,8 @@
   margin: 0;
   padding: 0.5em;
   border-radius: 4px;
-  border: 1px solid var(--dark-color);
-  background-color: var(--background-color);
+  border: 3px solid black;
+  background-color: grey;
   color: var(--text-color);
   font-size: var(--body-font-size-s);
   transition: border-color 0.2s;
