--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -64,7 +64,7 @@
   padding: 0.5em;
   border-radius: 4px;
   border: 3px solid black;
-  background-color: grey;
+  background-color: whitesmoke;
   color: var(--text-color);
   font-size: var(--body-font-size-s);
   transition: border-color 0.2s;
