--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -13,7 +13,7 @@
   display: grid;
   grid-auto-flow: row;
   margin: 0;
-  border:  3px solid black;
+  border:  3px solid rgb(105, 222, 46);
   padding: 0;
 }
 
