--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -67,7 +67,7 @@
   margin: 0;
   padding: 0.5em;
   border-radius: 4px;
-  border: 3px solid black;
+  border: 3px solid rgb(26, 204, 41);
   background-color: whitesmoke;
   color: var(--text-color);
   font-size: var(--body-font-size-s);
